Add fn-optimization notebook

--- a/doc/ga/str_matching.ipynb
+++ b/doc/ga/str_matching.ipynb
@@ -444,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved results to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\dt\\temp\\string_matching_results.png\n"
+      "Saved results to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\data\\temp\\string_matching_results.png\n"
      ]
     }
    ],
