--- a/doc/ga/tsp.ipynb
+++ b/doc/ga/tsp.ipynb
@@ -616,7 +616,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved results to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\dt\\temp\\tsp_solution.png\n"
+      "Saved results to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\data\\temp\\tsp_solution.png\n",
+      "\n"
      ]
     }
    ],
@@ -664,7 +665,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved fitness history to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\dt\\temp\\tsp_fitness_history.png\n"
+      "Saved fitness history to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\data\\temp\\tsp_fitness_history.png\n"
      ]
     }
    ],
