--- a/doc/ga/knapsack.ipynb
+++ b/doc/ga/knapsack.ipynb
@@ -273,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved results to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\dt\\temp\\knapsack_results.png\n"
+      "Saved results to: c:\\Users\\fire\\Documents\\Code\\python\\ai\\data\\temp\\knapsack_results.png\n"
      ]
     }
    ],
