--- a/doc/ga/fn-optimization.ipynb
+++ b/doc/ga/fn-optimization.ipynb
@@ -11,15 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added c:\\Users\\fire\\Documents\\Code\\python\\ai to Python path\n",
-      "Set random seeds to 42\n"
+      "Added c:\\Users\\fire\\Lab\\ai to Python path\n",
+      "No seed provided, using default seed 42\n",
+      "To set a new seed use \u001b[91mset_seeds(seed=42)\u001b[0m\n"
      ]
     }
    ],
@@ -33,16 +34,11 @@
     "    sys.path.insert(0, str(doc_dir))\n",
     "\n",
     "# Now import everything with one line\n",
-    "from init_notebook import GeneticAlgorithm, AssetType, am, torch, np, plt\n",
+    "from doc.notebook import GeneticAlgorithm, AssetType, am, torch, np, plt\n",
     "\n",
     "from dataclasses import dataclass\n",
     "from typing import List, Tuple, Callable\n",
-    "import random\n",
-    "\n",
-    "# Set seeds for reproducibility\n",
-    "torch.manual_seed(42)\n",
-    "np.random.seed(42)\n",
-    "random.seed(42)"
+    "import random"
    ]
   },
   {
