--- a/doc/gpu-troubleshooter.ipynb
+++ b/doc/gpu-troubleshooter.ipynb
@@ -105,7 +105,7 @@
       "NVIDIA GPUs found:\n",
       "  1. NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "\n",
-      "NVIDIA Driver Version: 32.0.15.6636\n",
+      "NVIDIA Driver Version: 32.0.15.7270\n",
       "\n",
       "AMD GPUs found:\n",
       "  1. AMD Radeon 780M Graphics\n"
@@ -217,16 +217,16 @@
       "\n",
       "Checking if CUDA is generally available on your system...\n",
       "CUDA is available on your system! nvidia-smi output:\n",
-      "Mon Mar 10 22:17:32 2025       \n",
+      "Wed Apr 30 09:21:05 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 566.36                 Driver Version: 566.36         CUDA Version: 12.7     |\n",
+      "| NVIDIA-SMI 572.70                 Driver Version: 572.70         CUDA Version: 12.8     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
       "| GPU  Name                  Driver-Model | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4060 ...  WDDM  |   00000000:01:00.0  On |                  N/A |\n",
-      "| N/A   63C    P3             13W /   55W |     509MiB /   8188MiB |     18%      Default |\n"
+      "| N/A   71C    P0             10W /   80W |     648MiB /   8188MiB |     33%      Default |\n"
      ]
     }
    ],
@@ -321,9 +321,9 @@
      "output_type": "stream",
      "text": [
       "Checking PyTorch installation details...\n",
-      "PyTorch is installed at: c:\\Users\\fire\\Documents\\Code\\python\\ai\\.venv\\Lib\\site-packages\\torch\\__init__.py\n",
+      "PyTorch is installed at: c:\\Users\\fire\\Lab\\ai\\.venv\\Lib\\site-packages\\torch\\__init__.py\n",
       "PyTorch package version: 2.5.1+cu121\n",
-      "Package location: c:\\users\\fire\\documents\\code\\python\\ai\\.venv\\lib\\site-packages\n",
+      "Package location: c:\\users\\fire\\lab\\ai\\.venv\\lib\\site-packages\n",
       "This appears to be a CUDA-enabled build of PyTorch\n"
      ]
     },
@@ -331,7 +331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fire\\AppData\\Local\\Temp\\ipykernel_35776\\3853135887.py:11: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
+      "C:\\Users\\fire\\AppData\\Local\\Temp\\ipykernel_14080\\1464567873.py:12: DeprecationWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html\n",
       "  import pkg_resources\n"
      ]
     }
@@ -561,21 +561,22 @@
      "text": [
       "Collecting detailed system information for debugging...\n",
       "\n",
-      "Python executable: c:\\Users\\fire\\Documents\\Code\\python\\ai\\.venv\\Scripts\\python.exe\n",
+      "Python executable: c:\\Users\\fire\\Lab\\ai\\.venv\\Scripts\\python.exe\n",
       "Python version: 3.12.9 (main, Feb 12 2025, 14:52:31) [MSC v.1942 64 bit (AMD64)]\n",
-      "Python path: ['C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none\\\\python312.zip', 'C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none\\\\DLLs', 'C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none\\\\Lib', 'C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none', 'c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv', '', 'c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv\\\\Lib\\\\site-packages', 'c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\setuptools\\\\_vendor']\n",
+      "Python path: ['C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none\\\\python312.zip', 'C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none\\\\DLLs', 'C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none\\\\Lib', 'C:\\\\Users\\\\fire\\\\AppData\\\\Roaming\\\\uv\\\\python\\\\cpython-3.12.9-windows-x86_64-none', 'c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv', '', 'c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv\\\\Lib\\\\site-packages', 'c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv\\\\Lib\\\\site-packages\\\\setuptools\\\\_vendor']\n",
       "\n",
       "Installed packages:\n",
-      "Error getting pip list: Command '['c:\\\\Users\\\\fire\\\\Documents\\\\Code\\\\python\\\\ai\\\\.venv\\\\Scripts\\\\python.exe', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
+      "Error getting pip list: Command '['c:\\\\Users\\\\fire\\\\Lab\\\\ai\\\\.venv\\\\Scripts\\\\python.exe', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
       "\n",
       "CUDA-related environment variables:\n",
+      "CHOCOLATEYLASTPATHUPDATE: 133864785615610618\n",
+      "GOPATH: C:\\Users\\fire\\go\n",
       "HOMEPATH: \\Users\\fire\n",
-      "PATH: c:\\Users\\fire\\Documents\\Code\\python\\ai\\.venv\\Scripts;C:\\Users\\fire\\Documents\\Code\\python\\ai\\.venv\\Scripts;C:\\Program Files\\WindowsApps\\Microsoft.PowerShell_7.5.0.0_x64__8wekyb3d8bbwe;c:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Alacritty\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\NVIDIA Corporation\\NVIDIA app\\NvDLISR;C:\\Program Files\\dotnet\\;C:\\Program Files\\GitHub CLI\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\nodejs\\;C:\\Program Files\\Neovim\\bin;;C:\\Program Files\\Microsoft VS Code Insiders\\bin;C:\\Program Files\\starship\\bin\\;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Users\\fire\\miniforge3;C:\\Users\\fire\\miniforge3\\Library\\mingw-w64\\bin;C:\\Users\\fire\\miniforge3\\Library\\usr\\bin;C:\\Users\\fire\\miniforge3\\Library\\bin;C:\\Users\\fire\\miniforge3\\Scripts;C:\\Users\\fire\\.local\\bin;C:\\Users\\fire\\AppData\\Local\\pnpm;C:\\Users\\fire\\AppData\\Local\\pnpm;C:\\Users\\fire\\.cargo\\bin;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\fire\\AppData\\Local\\Programs\\oh-my-posh\\bin;C:\\Users\\fire\\AppData\\Local\\gitkraken\\bin;C:\\Users\\fire\\AppData\\Local\\Programs\\Microsoft VS Code Insiders\\bin;C:\\Users\\fire\\AppData\\Local\\bin\\NASM;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Links;C:\\Users\\fire\\.bun\\bin;C:\\Users\\fire\\.deno\\bin;C:\\Users\\fire\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\fire\\AppData\\Local\\Programs\\Ollama;C:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx86\\x64\n",
+      "PATH: c:\\Users\\fire\\Lab\\ai\\.venv\\Scripts;C:\\Users\\fire\\Documents\\Code\\python\\ai\\.venv\\Scripts;C:\\Program Files\\WindowsApps\\Microsoft.PowerShell_7.5.1.0_x64__8wekyb3d8bbwe;C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.6.7-hotspot\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;c:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Alacritty\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\NVIDIA Corporation\\NVIDIA app\\NvDLISR;C:\\Program Files\\dotnet\\;C:\\Program Files\\GitHub CLI\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Microsoft VS Code Insiders\\bin;C:\\Program Files\\starship\\bin\\;;C:\\ProgramData\\chocolatey\\bin;C:\\Program Files\\nodejs\\;C:\\Program Files\\Go\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\CMake\\bin;C:\\Program Files\\WindowsApps\\Microsoft.PowerShell_7.5.0.0_x64__8wekyb3d8bbwe;c:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Alacritty\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\NVIDIA Corporation\\NVIDIA app\\NvDLISR;C:\\Program Files\\dotnet\\;C:\\Program Files\\GitHub CLI\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Microsoft VS Code Insiders\\bin;C:\\Program Files\\starship\\bin\\;C:\\ProgramData\\chocolatey\\bin;C:\\Program Files\\nodejs\\;C:\\Program Files\\Go\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Users\\fire\\AppData\\Local\\Programs\\Python\\Python313\\Scripts\\;C:\\Users\\fire\\AppData\\Local\\Programs\\Python\\Python313\\;C:\\Users\\fire\\scoop\\shims;C:\\Users\\fire\\.local\\bin;C:\\Users\\fire\\.cargo\\bin;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\fire\\AppData\\Local\\gitkraken\\bin;C:\\Users\\fire\\AppData\\Local\\bin\\NASM;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Links;C:\\Users\\fire\\.deno\\bin;C:\\Users\\fire\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\fire\\AppData\\Local\\Programs\\Ollama;C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx86\\x64;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Packages\\Schniz.fnm_Microsoft.Winget.Source_8wekyb3d8bbwe;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Packages\\DenoLand.Deno_Microsoft.Winget.Source_8wekyb3d8bbwe;C:\\Users\\fire\\.bun\\bin;C:\\Users\\fire\\AppData\\Roaming\\npm;C:\\Users\\fire\\go\\bin;C:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.6.7-hotspot\\\\bin;\n",
       "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.CPL\n",
-      "POSH_THEMES_PATH: C:\\Users\\fire\\AppData\\Local\\Programs\\oh-my-posh\\themes\n",
-      "PSMODULEPATH: C:\\Users\\fire\\Documents\\PowerShell\\Modules;C:\\Program Files\\PowerShell\\Modules;c:\\program files\\windowsapps\\microsoft.powershell_7.5.0.0_x64__8wekyb3d8bbwe\\Modules;C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
-      "VSCODE_CODE_CACHE_PATH: C:\\Users\\fire\\AppData\\Roaming\\Code - Insiders\\CachedData\\3ea047c09e86b75b33ea8c84a351efd7d3899558\n",
-      "_OLD_VIRTUAL_PATH: C:\\Program Files\\WindowsApps\\Microsoft.PowerShell_7.5.0.0_x64__8wekyb3d8bbwe;c:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Alacritty\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\NVIDIA Corporation\\NVIDIA app\\NvDLISR;C:\\Program Files\\dotnet\\;C:\\Program Files\\GitHub CLI\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\nodejs\\;C:\\Program Files\\Neovim\\bin;;C:\\Program Files\\Microsoft VS Code Insiders\\bin;C:\\Program Files\\starship\\bin\\;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Users\\fire\\miniforge3;C:\\Users\\fire\\miniforge3\\Library\\mingw-w64\\bin;C:\\Users\\fire\\miniforge3\\Library\\usr\\bin;C:\\Users\\fire\\miniforge3\\Library\\bin;C:\\Users\\fire\\miniforge3\\Scripts;C:\\Users\\fire\\.local\\bin;C:\\Users\\fire\\AppData\\Local\\pnpm;C:\\Users\\fire\\AppData\\Local\\pnpm;C:\\Users\\fire\\.cargo\\bin;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\fire\\AppData\\Local\\Programs\\oh-my-posh\\bin;C:\\Users\\fire\\AppData\\Local\\gitkraken\\bin;C:\\Users\\fire\\AppData\\Local\\Programs\\Microsoft VS Code Insiders\\bin;C:\\Users\\fire\\AppData\\Local\\bin\\NASM;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Links;C:\\Users\\fire\\.bun\\bin;C:\\Users\\fire\\.deno\\bin;C:\\Users\\fire\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\fire\\AppData\\Local\\Programs\\Ollama;C:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx86\\x64\n",
+      "PSMODULEPATH: C:\\Users\\fire\\Documents\\PowerShell\\Modules;C:\\Program Files\\PowerShell\\Modules;c:\\program files\\windowsapps\\microsoft.powershell_7.5.1.0_x64__8wekyb3d8bbwe\\Modules;C:\\Program Files\\WindowsPowerShell\\Modules;C:\\WINDOWS\\system32\\WindowsPowerShell\\v1.0\\Modules\n",
+      "VSCODE_CODE_CACHE_PATH: C:\\Users\\fire\\AppData\\Roaming\\Code - Insiders\\CachedData\\049c89eefbc56491c9ba5ff8e8cfa1a87e979aab\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files\\WindowsApps\\Microsoft.PowerShell_7.5.1.0_x64__8wekyb3d8bbwe;C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.6.7-hotspot\\bin;C:\\Program Files\\Common Files\\Oracle\\Java\\javapath;c:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Alacritty\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\NVIDIA Corporation\\NVIDIA app\\NvDLISR;C:\\Program Files\\dotnet\\;C:\\Program Files\\GitHub CLI\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Microsoft VS Code Insiders\\bin;C:\\Program Files\\starship\\bin\\;;C:\\ProgramData\\chocolatey\\bin;C:\\Program Files\\nodejs\\;C:\\Program Files\\Go\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\CMake\\bin;C:\\Program Files\\WindowsApps\\Microsoft.PowerShell_7.5.0.0_x64__8wekyb3d8bbwe;c:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Alacritty\\;C:\\Windows\\system32;C:\\Windows;C:\\Windows\\System32\\Wbem;C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C:\\Windows\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Program Files\\NVIDIA Corporation\\NVIDIA app\\NvDLISR;C:\\Program Files\\dotnet\\;C:\\Program Files\\GitHub CLI\\;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Microsoft VS Code Insiders\\bin;C:\\Program Files\\starship\\bin\\;C:\\ProgramData\\chocolatey\\bin;C:\\Program Files\\nodejs\\;C:\\Program Files\\Go\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Users\\fire\\AppData\\Local\\Programs\\Python\\Python313\\Scripts\\;C:\\Users\\fire\\AppData\\Local\\Programs\\Python\\Python313\\;C:\\Users\\fire\\scoop\\shims;C:\\Users\\fire\\.local\\bin;C:\\Users\\fire\\.cargo\\bin;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\fire\\AppData\\Local\\gitkraken\\bin;C:\\Users\\fire\\AppData\\Local\\bin\\NASM;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Links;C:\\Users\\fire\\.deno\\bin;C:\\Users\\fire\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\Users\\fire\\AppData\\Local\\Programs\\Ollama;C:\\Program Files\\Microsoft Visual Studio\\2022\\Community\\VC\\Tools\\MSVC\\14.43.34808\\bin\\Hostx86\\x64;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Packages\\Schniz.fnm_Microsoft.Winget.Source_8wekyb3d8bbwe;C:\\Users\\fire\\AppData\\Local\\Microsoft\\WinGet\\Packages\\DenoLand.Deno_Microsoft.Winget.Source_8wekyb3d8bbwe;C:\\Users\\fire\\.bun\\bin;C:\\Users\\fire\\AppData\\Roaming\\npm;C:\\Users\\fire\\go\\bin;C:\\Users\\fire\\AppData\\Local\\Programs\\cursor\\resources\\app\\bin;C:\\Program Files\\Eclipse Adoptium\\jdk-21.0.6.7-hotspot\\\\bin;\n",
       "CUDA_MODULE_LOADING: LAZY\n"
      ]
     }
@@ -624,13 +625,13 @@
       "Testing PyTorch CPU performance...\n",
       "\n",
       "Matrix multiplication with size 1000x1000\n",
-      "Time taken: 0.0050 seconds\n",
+      "Time taken: 0.0065 seconds\n",
       "\n",
       "Matrix multiplication with size 2000x2000\n",
-      "Time taken: 0.0439 seconds\n",
+      "Time taken: 0.0601 seconds\n",
       "\n",
       "Matrix multiplication with size 4000x4000\n",
-      "Time taken: 0.3385 seconds\n"
+      "Time taken: 0.3857 seconds\n"
      ]
     }
    ],
