--- a/doc/gpu-troubleshooter.ipynb
+++ b/doc/gpu-troubleshooter.ipynb
@@ -27,11 +27,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python version: 3.12.9 (main, Feb 12 2025, 14:52:31) [MSC v.1942 64 bit (AMD64)]\n",
-      "Platform: Windows-11-10.0.26100-SP0\n",
+      "Python version: 3.12.11 (main, Jul  1 2025, 18:37:24) [Clang 20.1.4 ]\n",
+      "Platform: Linux-6.12.35-x86_64-with-glibc2.40\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "PyTorch version: 2.6.0+cu124\n",
-      "CUDA available: True\n",
+      "CUDA available: False\n",
       "CUDA version (PyTorch): 12.4\n",
       "\n",
       "PyTorch build details:\n",
@@ -99,16 +105,9 @@
       "Detecting GPUs...\n",
       "\n",
       "GPUs detected:\n",
-      "  1. AMD Radeon 780M Graphics\n",
-      "  2. NVIDIA GeForce RTX 4060 Laptop GPU\n",
+      "  1. Non-Windows platform - can't use wmic\n",
       "\n",
-      "NVIDIA GPUs found:\n",
-      "  1. NVIDIA GeForce RTX 4060 Laptop GPU\n",
-      "\n",
-      "NVIDIA Driver Version: 32.0.15.7270\n",
-      "\n",
-      "AMD GPUs found:\n",
-      "  1. AMD Radeon 780M Graphics\n"
+      "No NVIDIA GPUs detected\n"
      ]
     }
    ],
@@ -205,9 +204,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Issues detected with PyTorch GPU support:\n",
+      "  1. PyTorch has CUDA support, but can't access CUDA at runtime\n",
+      "\n",
+      "Checking if CUDA is generally available on your system...\n",
+      "CUDA is available on your system! nvidia-smi output:\n",
+      "Fri Aug  8 21:01:25 2025       \n",
+      "+-----------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 570.153.02             Driver Version: 570.153.02     CUDA Version: 12.8     |\n",
+      "|-----------------------------------------+------------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                        |               MIG M. |\n",
+      "|=========================================+========================+======================|\n",
+      "|   0  NVIDIA GeForce RTX 4060 ...    Off |   00000000:01:00.0 Off |                  N/A |\n",
+      "| N/A   52C    P8              2W /   80W |      12MiB /   8188MiB |      0%      Default |\n"
+     ]
+    }
+   ],
    "source": [
     "def check_pytorch_gpu_support():\n",
     "    try:\n",
@@ -291,9 +312,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking PyTorch installation details...\n",
+      "PyTorch is installed at: /home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages/torch/__init__.py\n",
+      "PyTorch package version: 2.6.0+cu124\n",
+      "Package location: /home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages\n",
+      "This appears to be a CUDA-enabled build of PyTorch\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_9937/1464567873.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "def check_install_source():\n",
     "    try:\n",
@@ -339,9 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your system doesn't appear to have hybrid graphics\n"
+     ]
+    }
+   ],
    "source": [
     "def check_hybrid_graphics():\n",
     "    # Check if this is a laptop with dual graphics\n",
@@ -378,9 +427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "                     DIAGNOSIS AND SOLUTION RECOMMENDATIONS                     \n",
+      "================================================================================\n",
+      "\n",
+      "Issue: No NVIDIA GPU detected in the system\n",
+      "Solution: If you believe you have an NVIDIA GPU, check if it's properly installed and recognized by Windows.\n"
+     ]
+    }
+   ],
    "source": [
     "def recommend_solution():\n",
     "    has_nvidia = len(nvidia_gpus) > 0\n",
@@ -483,9 +545,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting detailed system information for debugging...\n",
+      "\n",
+      "Python executable: /home/yrrrrrf/Documents/Lab/ai/.venv/bin/python\n",
+      "Python version: 3.12.11 (main, Jul  1 2025, 18:37:24) [Clang 20.1.4 ]\n",
+      "Python path: ['/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python312.zip', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12', '/home/yrrrrrf/.local/share/uv/python/cpython-3.12.11-linux-x86_64-gnu/lib/python3.12/lib-dynload', '', '/home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages', '/home/yrrrrrf/Documents/Lab/ai/.venv/lib/python3.12/site-packages/setuptools/_vendor']\n",
+      "\n",
+      "Installed packages:\n",
+      "Error getting pip list: Command '['/home/yrrrrrf/Documents/Lab/ai/.venv/bin/python', '-m', 'pip', 'list']' returned non-zero exit status 1.\n",
+      "\n",
+      "CUDA-related environment variables:\n",
+      "NIX_LD_LIBRARY_PATH: /run/current-system/sw/share/nix-ld/lib\n",
+      "PKG_CONFIG_PATH: /nix/store/n7abw5wmqn1acq0399hzinl625r34vn8-systemd-257.6-dev/lib/pkgconfig:/nix/store/d667kdfbfn17905f7kmdl33r9gvwzaji-pkg-config-wrapper-0.29.2/lib/pkgconfig:/nix/store/yw5xqn8lqinrifm9ij80nrmf0i6fdcbx-alsa-lib-1.2.13/lib/pkgconfig:/nix/store/3ybnl9nq86s7jz0i8pzqlrabjgdxzrjz-glib-2.84.3-bin/lib/pkgconfig:/nix/store/7227amwg7k4sbl6mhglq17v5x5ki54ks-libglvnd-1.7.0/lib/pkgconfig:/nix/store/sisfq9wihyqqjzmrpik9b4xksifw97ha-libxkbcommon-1.8.1/lib/pkgconfig:/nix/store/az1wz2fh6y0j0simjsl2b58ksyrjdf71-sdl2-compat-2.32.56/lib/pkgconfig:/nix/store/2snalm100yr5g8fdpfn83qq8nga2g3hh-SDL2_gfx-1.0.4/lib/pkgconfig:/nix/store/zvhv6diykls92mxg2l3x1jbh72hiy81b-SDL2_image-2.8.8/lib/pkgconfig:/nix/store/fx0lxaimqlgncfc6jinahgrih4rfdvzs-SDL2_mixer-2.8.1/lib/pkgconfig:/nix/store/3n6m0alsrc0ajn9bdmbrqhm6dnlbfhmd-SDL2_ttf-2.24.0/lib/pkgconfig:/nix/store/60lzwimi95ls10zwqxpb6ngzax1z7s9a-wayland-1.23.1/lib/pkgconfig:/nix/store/1nsvsrqp5zm96r9p3rrq3yhlyw8jiy91-libX11-1.8.12/lib/pkgconfig:/nix/store/b41hqc61539rrkhzfywxm8bw2j31dadc-libXcursor-1.2.3/lib/pkgconfig:/nix/store/58dzwlbfldrsnwah1q3cfaqrx98jajpp-libXi-1.8.2/lib/pkgconfig:/nix/store/nwycj4y8brrzk3h8ikw4axqni3bfma5w-libXinerama-1.1.5/lib/pkgconfig:/nix/store/5fcbi2lycw2hz7rbn3nl5nrhhk2ki8dd-libXrandr-1.5.4/lib/pkgconfig:/nix/store/i8ls8rz7c56ipdqwkr3c1lcpr30kh77m-fontconfig-2.16.0-bin/lib/pkgconfig:/nix/store/yw429hvy80x2hg00lsfdfhkkib7gz54g-freetype-2.13.3/lib/pkgconfig:/nix/store/pcm23dq8n6vj89kxzykw4gq9wbh5w7b4-qtbase-6.9.1/lib/pkgconfig:/nix/store/s8xcn83hvd4ljm3fr0k1y397hhd4n5fm-qtwayland-6.9.1/lib/pkgconfig:/nix/store/lrrj9h7h1ifbdv82rrbddxracm5jjxwx-libjpeg-turbo-3.0.4-bin/lib/pkgconfig:/nix/store/4i49f869yc93c77m0y1lmpnvlzip5pgr-libpng-apng-1.6.46/lib/pkgconfig:/nix/store/l4mhds1994iaa7s7k8a782qra2yipv5b-giflib-5.2.2/lib/pkgconfig\n",
+      "XCURSOR_PATH: /home/yrrrrrf/.icons:/home/yrrrrrf/.local/share/icons:/home/yrrrrrf/.nix-profile/share/icons:/home/yrrrrrf/.nix-profile/share/pixmaps:/nix/profile/share/icons:/nix/profile/share/pixmaps:/home/yrrrrrf/.local/state/nix/profile/share/icons:/home/yrrrrrf/.local/state/nix/profile/share/pixmaps:/etc/profiles/per-user/yrrrrrf/share/icons:/etc/profiles/per-user/yrrrrrf/share/pixmaps:/nix/var/nix/profiles/default/share/icons:/nix/var/nix/profiles/default/share/pixmaps:/run/current-system/sw/share/icons:/run/current-system/sw/share/pixmaps\n",
+      "NIX_PATH: nixpkgs=/nix/var/nix/profiles/per-user/root/channels/nixos:nixos-config=/etc/nixos/configuration.nix:/nix/var/nix/profiles/per-user/root/channels\n",
+      "VSCODE_CODE_CACHE_PATH: /home/yrrrrrf/.config/Code/CachedData/dfaf44141ea9deb3b4096f7cd6d24e00c147a4b1\n",
+      "INFOPATH: /home/yrrrrrf/.nix-profile/info:/home/yrrrrrf/.nix-profile/share/info:/nix/profile/info:/nix/profile/share/info:/home/yrrrrrf/.local/state/nix/profile/info:/home/yrrrrrf/.local/state/nix/profile/share/info:/etc/profiles/per-user/yrrrrrf/info:/etc/profiles/per-user/yrrrrrf/share/info:/nix/var/nix/profiles/default/info:/nix/var/nix/profiles/default/share/info:/run/current-system/sw/info:/run/current-system/sw/share/info\n",
+      "GTK_PATH: /home/yrrrrrf/.nix-profile/lib/gtk-2.0:/home/yrrrrrf/.nix-profile/lib/gtk-3.0:/home/yrrrrrf/.nix-profile/lib/gtk-4.0:/nix/profile/lib/gtk-2.0:/nix/profile/lib/gtk-3.0:/nix/profile/lib/gtk-4.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-2.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-3.0:/home/yrrrrrf/.local/state/nix/profile/lib/gtk-4.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-2.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-3.0:/etc/profiles/per-user/yrrrrrf/lib/gtk-4.0:/nix/var/nix/profiles/default/lib/gtk-2.0:/nix/var/nix/profiles/default/lib/gtk-3.0:/nix/var/nix/profiles/default/lib/gtk-4.0:/run/current-system/sw/lib/gtk-2.0:/run/current-system/sw/lib/gtk-3.0:/run/current-system/sw/lib/gtk-4.0\n",
+      "QTWEBKIT_PLUGIN_PATH: /home/yrrrrrf/.nix-profile/lib/mozilla/plugins/:/nix/profile/lib/mozilla/plugins/:/home/yrrrrrf/.local/state/nix/profile/lib/mozilla/plugins/:/etc/profiles/per-user/yrrrrrf/lib/mozilla/plugins/:/nix/var/nix/profiles/default/lib/mozilla/plugins/:/run/current-system/sw/lib/mozilla/plugins/\n",
+      "LD_LIBRARY_PATH: /nix/store/skrisksfpp0da0yg896bs9j43wq5rks2-libdbusmenu-glib-16.04.0/lib:/nix/store/n7abw5wmqn1acq0399hzinl625r34vn8-systemd-257.6-dev/lib:/nix/store/d667kdfbfn17905f7kmdl33r9gvwzaji-pkg-config-wrapper-0.29.2/lib:/nix/store/yw5xqn8lqinrifm9ij80nrmf0i6fdcbx-alsa-lib-1.2.13/lib:/nix/store/y3nxdc2x8hwivppzgx5hkrhacsh87l21-glib-2.84.3/lib:/nix/store/7227amwg7k4sbl6mhglq17v5x5ki54ks-libglvnd-1.7.0/lib:/nix/store/sisfq9wihyqqjzmrpik9b4xksifw97ha-libxkbcommon-1.8.1/lib:/nix/store/az1wz2fh6y0j0simjsl2b58ksyrjdf71-sdl2-compat-2.32.56/lib:/nix/store/2snalm100yr5g8fdpfn83qq8nga2g3hh-SDL2_gfx-1.0.4/lib:/nix/store/zvhv6diykls92mxg2l3x1jbh72hiy81b-SDL2_image-2.8.8/lib:/nix/store/fx0lxaimqlgncfc6jinahgrih4rfdvzs-SDL2_mixer-2.8.1/lib:/nix/store/3n6m0alsrc0ajn9bdmbrqhm6dnlbfhmd-SDL2_ttf-2.24.0/lib:/nix/store/60lzwimi95ls10zwqxpb6ngzax1z7s9a-wayland-1.23.1/lib:/nix/store/1nsvsrqp5zm96r9p3rrq3yhlyw8jiy91-libX11-1.8.12/lib:/nix/store/b41hqc61539rrkhzfywxm8bw2j31dadc-libXcursor-1.2.3/lib:/nix/store/58dzwlbfldrsnwah1q3cfaqrx98jajpp-libXi-1.8.2/lib:/nix/store/nwycj4y8brrzk3h8ikw4axqni3bfma5w-libXinerama-1.1.5/lib:/nix/store/5fcbi2lycw2hz7rbn3nl5nrhhk2ki8dd-libXrandr-1.5.4/lib:/nix/store/nm07kfl411ig0yv61rvginj665b6c0ms-fontconfig-2.16.0-lib/lib:/nix/store/yw429hvy80x2hg00lsfdfhkkib7gz54g-freetype-2.13.3/lib:/nix/store/pcm23dq8n6vj89kxzykw4gq9wbh5w7b4-qtbase-6.9.1/lib:/nix/store/s8xcn83hvd4ljm3fr0k1y397hhd4n5fm-qtwayland-6.9.1/lib:/nix/store/yvdmi1gvqjjil5ihka8qs9wrr92gns9j-libjpeg-turbo-3.0.4/lib:/nix/store/4i49f869yc93c77m0y1lmpnvlzip5pgr-libpng-apng-1.6.46/lib:/nix/store/l4mhds1994iaa7s7k8a782qra2yipv5b-giflib-5.2.2/lib\n",
+      "LIBEXEC_PATH: /home/yrrrrrf/.nix-profile/libexec:/nix/profile/libexec:/home/yrrrrrf/.local/state/nix/profile/libexec:/etc/profiles/per-user/yrrrrrf/libexec:/nix/var/nix/profiles/default/libexec:/run/current-system/sw/libexec\n",
+      "PATH: /home/yrrrrrf/Documents/Lab/ai/.venv/bin:/nix/store/3ybnl9nq86s7jz0i8pzqlrabjgdxzrjz-glib-2.84.3-bin/bin:/home/yrrrrrf/.local/bin:/run/wrappers/bin:/home/yrrrrrf/.nix-profile/bin:/nix/profile/bin:/home/yrrrrrf/.local/state/nix/profile/bin:/etc/profiles/per-user/yrrrrrf/bin:/nix/var/nix/profiles/default/bin:/run/current-system/sw/bin:/nix/store/2gkh9v7wrzjq6ws312c6z6ajwnjvwcmb-binutils-wrapper-2.44/bin:/nix/store/xizrx0pmgjbsx6miwk352nf77jw2rb60-hyprland-qtutils-0.1.4/bin:/nix/store/7gspl5402q53m36mavbq3rxxlh70kqfv-pciutils-3.13.0/bin:/nix/store/9aanvmg69mvcs192ikk7rvs3gw1rgy37-pkgconf-wrapper-2.4.3/bin\n",
+      "JUPYTER_PATH: /home/yrrrrrf/.config/Code/User/globalStorage/ms-toolsai.jupyter/version-2025.7.0/jupyter\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yrrrrrf/Documents/Lab/ai/.venv/bin/python: No module named pip\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Collecting detailed system information for debugging...\")\n",
     "\n",
@@ -520,9 +618,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing PyTorch CPU performance...\n",
+      "\n",
+      "Matrix multiplication with size 1000x1000\n",
+      "Time taken: 0.0060 seconds\n",
+      "\n",
+      "Matrix multiplication with size 2000x2000\n",
+      "Time taken: 0.0420 seconds\n",
+      "\n",
+      "Matrix multiplication with size 4000x4000\n",
+      "Time taken: 0.2226 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import time\n",
@@ -569,9 +684,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "                          GPU TROUBLESHOOTING SUMMARY                           \n",
+      "================================================================================\n",
+      "\n",
+      "System:\n",
+      "  Operating System: Linux 6.12.35\n",
+      "  Architecture: x86_64\n",
+      "  Python: 3.12.11\n",
+      "\n",
+      "PyTorch:\n",
+      "  Version: 2.6.0+cu124\n",
+      "  CUDA Support: Yes\n",
+      "  CUDA Version: 12.4\n",
+      "  CUDA Available at Runtime: No\n",
+      "\n",
+      "GPU:\n",
+      "  NVIDIA GPU: None detected\n",
+      "\n",
+      "Diagnosis:\n",
+      "  No NVIDIA GPU detected\n",
+      "\n",
+      "Next Steps:\n",
+      "  1. If you believe you have an NVIDIA GPU, check if it's properly installed\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "def print_summary():\n",
     "    import torch\n",
@@ -653,7 +800,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ai (3.12.11)",
    "language": "python",
    "name": "python3"
   },
@@ -667,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
